--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <div class="background-overlay"></div>
 
     <!-- Звуковые эффекты -->
-    <audio id="spinSound" src="media/spin.mp3"></audio>
-    <audio id="winSound" src="media/win.mp3"></audio>
-    <audio id="bigWinSound" src="media/bigwin.mp3"></audio>
-    <audio id="bonusSound" src="media/bonus.mp3"></audio>
-    <audio id="bgMusic" src="media/background.mp3" loop autoplay></audio>
+    <audio id="spinSound" src="spin.mp3"></audio>
+    <audio id="winSound" src="win.mp3"></audio>
+    <audio id="bigWinSound" src="bigwin.mp3"></audio>
+    <audio id="bonusSound" src="bonus.mp3"></audio>
+    <audio id="bgMusic" src="background.mp3" loop autoplay></audio>
 
     <div class="game-container">
         <div class="header">
