--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </div>
 
     <!-- Звуковые эффекты -->
-    <audio id="spinSound" src="media/spin.mp3"></audio>
-    <audio id="winSound" src="media/win.mp3"></audio>
-    <audio id="bigWinSound" src="media/bigwin.mp3"></audio>
-    <audio id="bonusSound" src="media/bonus.mp3"></audio>
-    <audio id="bgMusic" src="media/background.mp3" loop></audio>
+    <audio id="spinSound" src="spin.mp3"></audio>
+    <audio id="winSound" src="win.mp3"></audio>
+    <audio id="bigWinSound" src="bigwin.mp3"></audio>
+    <audio id="bonusSound" src="bonus.mp3"></audio>
+    <audio id="bgMusic" src="background.mp3" loop></audio>
 
     <div class="particles-container" id="particlesContainer"></div>
 
